# salmon-wallpaper

./: .gitignore  AndroidManifest.xml
assets/: gui_transparent_clip.fragment  gui_transparent_clip.vertex  ice1.lm1  ice2.lm1  ice3.lm1  ice4.lm1  ice5.lm1  ice6.lm1  ices.json  ices.xml  mountain.lm1  test_norm.fragment  test_norm.vertex  test_parallax.fragment  test_simplelight.fragment  test_simplelight.vertex
jni/: Android.mk  android_api.cpp  android_api.h  main_code.cpp  main_code.h
proj.android-studio/: build.gradle  settings.gradle
proj.android-studio/app/: CMakeLists.txt  build.gradle
proj.android-studio/app/src/androidTest/java/fishrungames/salmonandroidtemplate/: ExampleInstrumentedTest.java
proj.android-studio/app/src/main/: AndroidManifest.xml
proj.android-studio/app/src/main/java/fishrungames/mountainwallpaper/: BaseConfigChooser.kt  GLWallpaperService.java  GLWallpaperService.kt  JniWrapper.java  MountainWallpaper.kt  MountainWallpaperService.java  Prefs.java  WallpaperPreferenceFragment.kt  WallpaperPreferences.kt  WallpaperRenderer.kt
proj.android-studio/app/src/main/java/fishrungames/reflectedmountain/: BaseConfigChooser.kt  GLWallpaperService.kt  JniWrapper.java  MountainWallpaper.kt  WallpaperPreferenceFragment.kt  WallpaperPreferences.kt  WallpaperRenderer.kt
proj.android-studio/app/src/main/res/layout/: pref_activity.xml  prefliste.xml
proj.android-studio/app/src/main/res/values/: strings.xml
proj.android-studio/app/src/main/res/values-cs/: strings.xml
proj.android-studio/app/src/main/res/values-de/: strings.xml
proj.android-studio/app/src/main/res/values-es/: strings.xml
proj.android-studio/app/src/main/res/values-fr/: strings.xml
proj.android-studio/app/src/main/res/values-it/: strings.xml
proj.android-studio/app/src/main/res/values-nl/: strings.xml
proj.android-studio/app/src/main/res/values-pt/: strings.xml
proj.android-studio/app/src/main/res/values-ru/: strings.xml
proj.android-studio/app/src/main/res/xml/: preferences.xml  wallpaper.xml
proj.android-studio/app/src/test/java/fishrungames/salmonandroidtemplate/: ExampleUnitTest.java
proj.android-studio/gradle/wrapper/: gradle-wrapper.properties
res/values/: strings.xml
res/values-de/: strings.xml
res/values-fr/: strings.xml
res/values-it/: strings.xml
res/values-nl/: strings.xml
res/values-pt/: strings.xml
res/values-ru/: strings.xml
res/xml/: wallpaper.xml
src/fishrungames/mountainwallpaper/: GLWallpaperService.java  JniWrapper.java  MountainWallpaperService.java
windows/: Readme.txt  Template.sln
windows/Template/: Template.vcxproj  main.cpp  main.h
